--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
 .App {
   text-align: center;
+  height: 100vh;
+  width: 100vw;
 }
 
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.routesWrapper {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  height: 100vh;
+  width: 100vw;
+  background-color: cadetblue;
+}
+
+.sidebar {
+  height: 100vh;
+  width: 200px;
+  background-color: #2f4050;
+}
+
+.sidebarList {
+  height: auto;
+  width: 100%;
+  padding: 0;
+}
+
+.sidebarList .ancharTagsideBarRow {
+  height: 100%;
+  width: 50px;
+  /* border: 1px solid black; */
+  margin: 20px;
+  margin-left: 15px;
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.sidebarList .ancharTagsideBarRow:hover {
+  cursor: pointer;
+  margin: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
+.sideBarIcon {
+  margin: 10px;
+  margin-left: 0px;
+}
+
+.formWrapper {
+  width: 100vw;
+  height: 1000px;
+  display: grid;
+}
+
+.tableWrapper {
+  width: 1150px;
+  height: 500px;
+  /* display: grid; */
+}
